@@ -8,6 +8,7 @@ DIST man-pages-3.79.tar.xz 1320688 SHA256 b2d608c8910850c560658370a9acd5d25cb92a
 DIST man-pages-3.80.tar.xz 1332548 SHA256 686847880557aec5a4f09bdc12d92185a784baa47c52f53676f06acc4b0d40c2 SHA512 a21be65f566654c3ecaea2b6a4da4db2b83cd64debaeb36c4ff5b4771d70c382fe24c66a025f9e531799a99d0be53a6a28545481c2403dc6193952999c1c84f0 WHIRLPOOL e4a9a39660f99c206469871934d1145b42b88670fb5525bfe329a39e62b2657bf5730ac071fb87e4f3110ecd4f299253979c6b53496c5b378d2ff4a4a37af353
 DIST man-pages-3.81.tar.xz 1344848 SHA256 b5b98411ff4548262d9ab30e1ad68ca1ea228f6c5c51ed5490bd92f00b9cf2c2 SHA512 4f152f4f833f011ce9a39bbf70663dcd565d74a9ccaf10a0c9da810df0efc14227b9ef98edd1087ae722b5d21b827868d32c5c66150953645bd17a3f25ea2fc4 WHIRLPOOL 93fb6f29776dd704c685092eb312d2cc72e267f06dc5787489fa78e2ce99ceec503a632e90de347e55c74f8fbf9bd4a501140cce7395c785f7dec7d58942e0c8
 DIST man-pages-3.82.tar.xz 1357152 SHA256 547273dd0a1c26e5bb2169baa50a7e0e0c93b6e41997729d4d8638a8513018b1 SHA512 d81ddcab7385f2e92db3dc5643d28ca767b2bd96077cdffbe20866bd0a1f0a2811eba6b0f07becbe82110e8ff4f971379d5229995bb99d6eebf9d65ba42bba93 WHIRLPOOL 58323b003dcc02d0c46b941105269a8cd5a74400b7a8160c2c56e78ab93f38b33da70519dd322fe0d953967aa5b9cd325b0fcf9e180ec79d3cc9238af6f36468
+DIST man-pages-3.83.tar.xz 1364196 SHA256 72fce6a1f282146504556ed54b93f06acef77f30114c1c00755b21bb5def7af2 SHA512 48ccca8f3a8f86bf1256e018230a2a9012f0684ac8243fae95ff0bc42cb7289ef577762f890c4ca2115967bde73378b29b7ee23c549653126c052253499827e5 WHIRLPOOL 0a005dc2b58a8e8e983c85725eafd02e0bb3b69835b76fc3ded338102ae68994f168aa7409a1d03e7d5ed4c453210a7122ab1a05a9368a901d540181db343942
 DIST man-pages-gentoo-2.tar.bz2 5141 SHA256 b7d9423c2069e587deb7671273d4a1ffed7d31b9f95a689b128a759d636762f0 SHA512 6e6524b8ad6f1b8c9b147665ee32af49e05603dac61d433acd6b4f1164adef27cd542898f272b07d8659725013dac59c7f34a858968cc054a4785c945e14a770 WHIRLPOOL dcacb319a54ccd2a965786c816684de286581dee6f7b3f8ba4c97cc368e2e50abc92aad403dbdb7b0c15764accb06cd562046bcf14229ad12be242bb2bc7f651
 EBUILD man-pages-3.75.ebuild 1744 SHA256 cc532b1d31bf3ab077e06a4cc7fdb8065dfd51f6cd2b9d4c417b3916c8565bcc SHA512 6cbc91457dd8a3f8a5005364a8999211efb039cde990172ff7ece0e715607c39d6ea48590be1ae29e4b53295a980ae2cbb4fe6af427ab8cb116e241e94a68792 WHIRLPOOL 880c6f5d791f03ee0fa30d4381866a25c96d576cef88b77b57b49d00da459b4cc817adb824ace07a03c76423c55a93adc04a46f42b24a4a01133e48caff2c1b3
 EBUILD man-pages-3.77.ebuild 1763 SHA256 549a7c7b5ee1bd847ef6f657eca4bf67c7d354d5aeccc658ad32a66a6a0166f8 SHA512 8736e6c42382e2d04b2d22f0a49d5e45c18b1760f141465a768334a44b746c6dead9cecc89515b67c9d608acf9d90e8fdbd399645f04a30bd4f43cc9f439a322 WHIRLPOOL 3a94197bdfdd7026de955e168f8983e5483d3628e4810408e586c706b1d41e30df6d2bbb7193a084c8f99533b2a63efa0aa11c92688cc0b35b4d2cdf83304e6e
@@ -15,23 +16,24 @@ EBUILD man-pages-3.78.ebuild 1744 SHA256 981c4821f52a888c3888cf8474d0cc123dab70c
 EBUILD man-pages-3.79.ebuild 1744 SHA256 ddc0478e77eeff89763c40a9c5989f5c3c0a73c7a89f0318f18b15a65d87968d SHA512 67823d3acac6cf68f34b699534bc3c6a4505e408ba29b11cda96b64068ffd89c38da0d02a173fedd8062ae02c5237c0079c47959262651652fbccf09d7edaf71 WHIRLPOOL d042426d46bcb3bb34b908abcc716f1353899e634b25786105974f047844c2f21bf9845a78288f9121a1b0ab8ccd19c64239953a9185491e023acaff9cb79a34
 EBUILD man-pages-3.80.ebuild 1759 SHA256 0c6bee3976687721ae3aa2d14e61c4ae9adf41a264b70f2b2a653b9c9057d765 SHA512 f94e5c2ce3403e1b3c518995c0a6679d47497cce6c8151c9755a404ce9b356e23586040ed3e4d76dce3db2dbd7b9111ab00df7060e2f5ab3273648405276f294 WHIRLPOOL ca4f09f38b062bf200c46bd5c0544b985679ebcfaa8e8c4c82c192a742db930572f6f69b3ba218bb4f225ba7625a3183d06a7254e454aa1a8f4d6b08441ec5f7
 EBUILD man-pages-3.81.ebuild 1744 SHA256 cc5c50899422604b2cab696110bd6ca5575165a60dc3c2fa8e0ecfb8170976ea SHA512 1ab6e331a20823fa77cf54a5e706dd44b4292a314c604429f1ff55fac651898bdd1fd0e732396f7cd2b0a3cbbd9a7758d72fdf137bcc65d69c19f2f9ff395279 WHIRLPOOL d3aceb6d1a5fc3ed438653dfa2566bac44ffd5b2a21f3ac0d6d41d4c2622ae1178a9a98b0199862a0922a7d150e71766654e49e39f434cc0c40a0b1d500f7cfc
-EBUILD man-pages-3.82.ebuild 1757 SHA256 7f1a31f4b3ebdb4217ff98a3b3254b0838337690ac762b8919d7889dfa7b0b0d SHA512 6c0fa829b769db73dc7d70eae040846039463138b382e6eb48bdd1a7c7dc3622960ca1cb08e6726577e9c069738a438bb1bb772e07abbb8b764009482a3f7bfd WHIRLPOOL 5b116077ad7f39e40bd101572a3f7ff4675578aa8b3f4c5bee11c0f7ba3252b725e0f8f8bc9a344bcf3c06e9d3bf5cefd89b1eb1bb1910a93abcbfcb1104ec0e
-MISC ChangeLog 31952 SHA256 138f58e52418031bc5025f74d7983f8075e089c1cd5a3d576c99171f420617ac SHA512 f63c1f98459d07f4068e3ba597e079b736528edc0e000e96626a6f38a3d2758f9e0c73f513b055fbcfad74c4fc5be2c6f8c37bafc3c0556f69c6b66ab9facd64 WHIRLPOOL bca50eff88a5cc15313a01c8e72a9387c11bad7817ebf57709ebd04601d0b8a7c08db83069d1b334ef6eb505b32b7c070cedd1805ddc495f4d9f98d24c10f093
+EBUILD man-pages-3.82.ebuild 1744 SHA256 d2e3a9ba13638944c005521de4cc6127f2e4f0521ac5c757701629f76358b1c0 SHA512 0ad62a4cb966f02bad093cbb62e315750909a01142d3328703955bce4816b2de94d09849f20ad53d4532ed81e3b5bbc780029ccd5de91499f2b42ac49f5b9cbe WHIRLPOOL ec535ceac5e9524d6027df4c4cfd4f886cabeddadce3a335371df15ecc6ff6571c3f69e273964a573edc3be01ee2bcb7aac79f0bee9d6179afd01dbd2d8d7d24
+EBUILD man-pages-3.83.ebuild 1757 SHA256 c40d94417037a2bc8de2dfc6d30f126725d8b2555953ab370cf9a55fc7098704 SHA512 29430064bd367bab04077cec175aa3f45fdd3e5d6e1b789d79cf6f2660146c859d23ca30d5d9f5c43c398f9c07a37e6c2801a206976d1a8fa102806b5db54a4f WHIRLPOOL 391911b3e1115d0ed51ec5aff3d6ab3817009cf6e2c518f7b58d72acd618a3e58f17ae870c51aa9f93428901bf033ff8fec2e5b285c0749574b01de1c6ebfebd
+MISC ChangeLog 32169 SHA256 36548bdebad1ce955eaab1d4f7ba471034fc8ddbfd395d34db35d794c68ed6fd SHA512 2ccbf910de8c6b0ce0eb42c1760dbc3c723b537ba7d6bd60e85f0d98921dae50723d980be8c6da915dc72d702ab74bfeee18502f935dc74dec310782d5f4d026 WHIRLPOOL efc69bb29adcfb9c9488daeb3bfa1ca3f0d59221a1a29c8622602bd04ad207bc8e696bf05243cf4de446a1cbd5d475d064993e7c90620c109934af47090fee97
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVGtGIAAoJEPGu1DbS6WIAKaoP/1hyqXAox+ehIc2h4Lz2OVoe
-NY3i6tzECE67XWwogGedboiGJsD+CTVvO3g0Zq37ii/zbCdJj78V4Puv2pLssau0
-NovSQoE6GoWhhtz2lBr8N5bUYYTM7n+kwm4IEjbMVAumRJzdLVMJf/8YCIaHTONw
-5zCD2/DN8kKofG3R9FXkmTeWrNaglqyoZCMVhjvoSM50pZhCqgNcYF5Yp31/T+Cn
-WtLfZmdCBX9vxq99dKgxdaJh8z2NpZFamqyTB45X8Okzw1w0IjAi2BnyOKgBzJ4h
-UghcLPr4imhnIgYzMDeoyAoSBPq9Vt95DUkeJu/bYXaxeZTujNQojImkVO5BXYmR
-Mah+tYPgaikUZ4uEdSXME2xemKMp1ilwjwla5Uh3NJZUXkGQeymZ8DJkgzlHUhxD
-72OGvarn/XYjdXFP9+ekk6VJHLc92WZg5LJux3P7aXDqWiu+xogMnuXSGSJcNeL4
-ZXkKLWoZ47bkzFAykiEEaANOktEN4YLZVp3BngZU56QINMh/zquHOQVhHZtv7to8
-CuGtbbRWga82fhYQo8m9GN1nWpzKjjq8afPGybYRLd5ybiuRz6CHoH44aegeTEdf
-215djMFOHfkeIgZ4mB/b5pKUGO1LvQ9Qi2s4SVLDvlNEryY+QO72FkjIttNkA2C4
-iyxgy5UBlhmcqutwqwIz
-=glgn
+iQIcBAEBCAAGBQJVNJTfAAoJEPGu1DbS6WIAgwUP/3jkxKKwBeK/L7I4yN1MFI5Y
+O40dp59Kp9nh3wROF+3jG/pStwX7U7b0gwi1B/CNtFZy2jdfMLT3ixKGL5+GSktB
+lDVla4++PLSiQRp6yN8+OhFH/hgESuqCHjfe0AKaPb+oTRfK26jMmWWhozOGBNeg
+AtEIz5QKM6UrlW/R78siKukHcpSLTieTKRJd/a96/NXgv1pSfyngMh8HZdrZfR3n
+KXfq2c6RMTPGU0PdGS9/HWRC5rr24IJcqBu9kUEZAZcqd1wAYanTJgSKusBafqMb
+VYGnuHPI5LQkkQpPMi4B/RaFs8s1sWIIuifEgcP0+a5srwx4J/HirvyAMy89TQtC
+Bbn0wFVkGGMxHVqeRwOjvHjkTa9jqWc6d2Rv9tJpLF8hXIQQKdS9Y35Zy0GL/TqX
+Fy2RKx2I7q1gzOCU214S6MCQ1YtgaSE1CC1DrS0eRWQtBJ/e94laIQ03Mragl0L5
+qiY9u5gAwysa5A0hcL61jiddrIZo8xY9FE5qvk6i3PExMZji5swIYTKaFH+hU6jZ
+M9+dLDw4e3Pj7bVYK8rYOl1c4sbNovLa8kZsM1sCPV1zld3XHtpY0yjcha1jx2BC
+5K7Yuf+7tAjgCazeq97MQYI/l37PfcxXVs8Fb5722sPwXJr5oEhqbSIt+9VHvUK8
++0FHf4b4RFmOsTMlJITn
+=+CTo
 -----END PGP SIGNATURE-----
